# fill-working-hours

./: .gitignore  LICENSE  README.md  main.py  projects-example.json  pyproject.toml
src/: __main__.py  days.py
src/fill_time/: __main__.py  days.py
