[tool.poetry]
name = "fill-time"
version = "0.1.0"
description = ""
authors = ["Robin Kennedy-Reid <robin.kennedy-reid@stfc.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
pip = "^21.3.1"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
